@@ -3,7 +3,7 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
     VALUES 
         (2,'main',NULL,'single_season','0','Single Season Mode','boolean',0,'','','This should be checked if your league is not a continuing league.  In single season mode historical seasons will not be parsed.  Seasons where the team numbers do not match the same owners, and the number of teams per season change, will break the parsing of historical seasons.  In single season mode non-admin user accounts will be deleted at the start of every season and users will need to re-register if they wish to have an account linked to their team.'),
         (10,'main',NULL,'output_folder','','Output Folder for CSV Files','text',0,'','','This should be the full or relative path to the folder on the local system where you want the CSV files that are generated by the psss.py script to be stored.  If this is not configured the files will be outputted to a folder named \"Output\" inside the folder where the script is located.'),
-        (11,'main',NULL,'check_loop','0','Check Number for Published Game Results','text',0,'blank,numeric','size=5','This determines whether the script should be run on demand or on a schedule, using something like cron or Windows Task Scheduler.  The default is to run on demand, for that the value should be \"0\".  If the script is to be run using a scheduler the following setting will determine how many times the script should check the website before it exits.  The script checks the league page url once every 10 minutes.  36 might be a good number which means that means the script will run for roughly 6 hours before it fails and exits.'),
+        (11,'main',NULL,'check_loop','0','Check Number for Published Game Results','text',0,'blank,numeric','size=5','This determines whether the script should be run on demand or on a schedule, using something like cron or Windows Task Scheduler.  The default is to run on demand, for that the value should be \"0\".  If the script is to be run using a scheduler the following setting will determine how many times the script should check the website before it exits.  The script checks the league page url once every 10 minutes.  36 might be a good number which means that means the script will run for roughly 6 hours before it fails and exits.  This check loop will only function during the MLB season, from April  to October.'),
         (12,'main',NULL,'check_string','game results are(?: now|) up','Check String for Published Game Results','text',0,'','','The string on the league page that the script should look for to determine if the game results have been published.  This will need to be changed if the wording Scoresheet uses to announce the game results releases is changed.\r\n\r\n<b>Note:</b>  This can contain regular expression syntax, but the start and end of line markers are already set as follows \"^.+\" and \".+$\"'),
         (13,'main',NULL,'fb_delay',600,'Feedback Delay','text',0,'','','This setting controls the number of seconds that must pass between users offering feedback on the Help page.'),
         (20,'main',NULL,'error_log_fname','ss_error_log','File Name Prefix for the Error Log CSV File','text',0,'','','This will be located in your output folder, in a folder labelled by season.'),
